# sumo-handicapper

./: .env.example  .gitattributes  .gitignore  PROJECT_SETUP_COMPLETE.md  QUICK_START.md  README.md  REORGANIZATION_SUMMARY.md  STREAMLIT_CLOUD_DEPLOYMENT.md  STREAMLIT_PYARROW_ISSUE.md  predict_bouts.py  predict_by_name.py  pyproject.toml  requirements.txt  run_streamlit.py  streamlit_requirements.txt  test_connection.py
.claude/: CLAUDE.md
data/: sample_bouts.csv
docs/: DATABASE_CONNECTION.md  GPU_TRAINING_GUIDE.md  PREDICTION_README.md  SETUP.md  STREAMLIT.md  STREAMLIT_CLOUD_SETUP.md  STREAMLIT_QUICKSTART.md  STREAMLIT_README.md  USAGE.md
docs/archive/: COLUMNS_202511052351.md  COLUMNS_202511060007.md  SUMMARY.md
models/: sumo_predictor_production.joblib
src/core/: db_connector.py  fantasy_points.py  sumo_predictor.py
src/prediction/: predict_bouts.py  predict_by_name.py  prediction_engine.py  streamlit_app.py
src/training/: benchmark_gpu_vs_cpu.py  enhanced_features.py  ensemble_models.py  iterative_improve.py  quick_improve.py  save_best_model.py  tune_gbm.py  update_model.py
src/utils/: explore_data.py  gpu_optimizer.py
src/utils/tests/: test_chronological_split.py  test_laplace_accuracy.py
