[project]
name = "sumo-handicapper"
version = "0.1.0"
description = "Machine learning system for predicting sumo wrestling match outcomes"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    # Database connectivity
    "pymysql==1.1.1",
    "sqlalchemy==2.0.35",
    # Data processing
    "pandas==2.2.3",
    "numpy==2.1.3",
    # Machine learning
    "scikit-learn>=1.7.2",
    "xgboost>=2.1.2",
    "lightgbm==4.5.0",
    # Utilities
    "tqdm==4.66.5",
    "joblib==1.4.2",
    # Web UI
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
